--- a/index.html
+++ b/index.html
@@ -646,6 +646,16 @@
 													height="342" src="images/4-e1710736117608.png"
 													class="attachment-large size-large wp-image-88" alt=""></a> </div>
 									</div>
+									<div class="elementor-element elementor-element-8eec3e3 elementor-widget__width-initial e-transform elementor-widget elementor-widget-image"
+									data-id="8eec3e3" data-element_type="widget" data-settings="{"
+									_transform_scale_effect_hover":{"unit":"px","size":1.1,"sizes":[]},"_transform_scale_effect_hover_tablet":{"unit":"px","size":"","sizes":[]},"_transform_scale_effect_hover_mobile":{"unit":"px","size":"","sizes":[]}}"=""
+									data-widget_type="image.default">
+									<div class="elementor-widget-container">
+										<a href="https://dexscreener.com/"
+											target="_blank"><img loading="lazy" decoding="async" width="454"
+												height="342" src="images/dextools.png"
+												class="attachment-large size-large wp-image-88" alt=""></a> </div>
+								</div>
 								</div>
 							</div>
 							<div class="elementor-element elementor-element-639b554 elementor-hidden-desktop elementor-widget elementor-widget-spacer"
