--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
 										_transform_scale_effect_hover":{"unit":"px","size":1.1,"sizes":[]},"_transform_scale_effect_hover_tablet":{"unit":"px","size":"","sizes":[]},"_transform_scale_effect_hover_mobile":{"unit":"px","size":"","sizes":[]}}"=""
 										data-widget_type="image.default">
 										<div class="elementor-widget-container">
-											<a href="https://dexscreener.com/"
+											<a href="https://dexscreener.com/solana/HffdymcGyEV66CH11VXPbiaeMENtuKYX1gpr2B3zpUMP"
 												target="_blank"><img loading="lazy" decoding="async" width="454"
 													height="342" src="images/4-e1710736117608.png"
 													class="attachment-large size-large wp-image-88" alt=""></a> </div>
@@ -651,7 +651,7 @@
 									_transform_scale_effect_hover":{"unit":"px","size":1.1,"sizes":[]},"_transform_scale_effect_hover_tablet":{"unit":"px","size":"","sizes":[]},"_transform_scale_effect_hover_mobile":{"unit":"px","size":"","sizes":[]}}"=""
 									data-widget_type="image.default">
 									<div class="elementor-widget-container">
-										<a href="https://dexscreener.com/"
+										<a href="https://www.dextools.io/app/en/solana/pair-explorer/HffdymcGyEV66CH11VXPbiaeMENtuKYX1gpr2B3zpUMP?t=1737455635523"
 											target="_blank"><img loading="lazy" decoding="async" width="454"
 												height="342" src="images/dextools.png"
 												class="attachment-large size-large wp-image-88" alt=""></a> </div>
@@ -954,7 +954,7 @@
 							data-id="07aa790" data-element_type="widget" data-widget_type="heading.default">
 							<div class="elementor-widget-container">
 								<h2 class="elementor-heading-title elementor-size-default" style="font-size: 35px;">CA:
-									0000000000000000000000000000000</h2>
+									HffdymcGyEV66CH11VXPbiaeMENtuKYX1gpr2B3zpUMP</h2>
 							</div>
 						</div>
 					</div>
